# docs/Default module.openapi.yaml
@@ -26,6 +26,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Tag'
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -61,6 +64,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Tag'
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -94,6 +100,9 @@ paths:
                 required:
                   - message
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -147,6 +156,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Article'
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -206,6 +218,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Article'
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -239,6 +254,9 @@ paths:
                 required:
                   - message
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '401':
           $ref: '#/components/responses/Unauthorized'
           description: ''
@@ -267,6 +285,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Article'
           headers: {}
+        '400':
+          $ref: '#/components/responses/Bad request'
+          description: ''
         '404':
           $ref: '#/components/responses/Not found'
           description: ''
@@ -292,7 +313,7 @@ paths:
             type: integer
         - name: author
           in: query
-          description: filter by author name
+          description: filter by author email
           required: false
           schema:
             type: string
@@ -380,7 +401,7 @@ components:
           type: string
         content:
           type: string
-        username:
+        userEmail:
           type: string
         userID:
           $ref: '#/components/schemas/UserID'
@@ -402,7 +423,7 @@ components:
         - createTime
         - updateTime
         - isDeleted
-        - username
+        - userEmail
         - userID
     ArticleID: &ref_0
       type: string
@@ -421,12 +442,12 @@ components:
     Author:
       type: object
       properties:
-        username:
+        userEmail:
           type: string
         userID:
           $ref: '#/components/schemas/UserID'
       required:
-        - username
+        - userEmail
         - userID
   responses:
     Unauthorized:
@@ -447,6 +468,17 @@ components:
         application/json:
           schema:
             title: ''
+            type: object
+            properties:
+              message:
+                type: string
+            required:
+              - message
+    Bad request:
+      description: ''
+      content:
+        application/json:
+          schema:
             type: object
             properties:
               message:
